@@ -5,10 +5,9 @@ else throw Error("Tagname must be first in element definition");for(var e="",g=0
 JAX.getTypeOf=function(a){if("number"==typeof a)return"number";if("string"==typeof a)return"string";if("undefined"==typeof a)return"undefined";if("function"==typeof a)return"function";if(!0===a||!1===a)return"boolean";if(null===a)return"null";a=Object.prototype.toString.call(a);return"[object Array]"==a?"array":"[object Date]"==a?"date":"object"};JAX.Node=JAK.ClassMaker.makeClass({NAME:"JAX.Node",VERSION:"1.02"});JAX.Node.ELEMENT_NODE=1;JAX.Node.TEXT_NODE=3;JAX.Node.COMMENT_NODE=8;
 JAX.Node.DOCUMENT_NODE=9;JAX.Node.DOCUMENT_FRAGMENT_NODE=11;JAX.Node._events=[];JAX.Node._MEASUREABLEVALUE_REGEXP=/^(?:-)?\d+(\.\d+)?(%|em|in|cm|mm|ex|pt|pc)?$/i;JAX.Node._OPACITY_REGEXP=/alpha\(opacity=['"]?([0-9]+)['"]?\)/i;JAX.Node._BOX_SIZING=null;(function(){var a={boxSizing:"box-sizing",mozBoxSizing:"-moz-box-sizing",WebkitBoxSizing:"-webkit-box-sizing"},b=document.createElement("div"),c;for(c in a)if(c in b.style){JAX.Node._BOX_SIZING=a[c];break}})();
 JAX.Node.prototype.$constructor=function(a){this._node=a;this.jaxNodeType=a.nodeType};JAX.Node.prototype.$destructor=function(){-1!=[1,9].indexOf(this._node.nodeType)&&this.stopListening();this._node=null;this._jaxId=-1};JAX.Node.prototype.node=function(){return this._node};JAX.Node.prototype.find=function(a){return JAX(a,this._node)};JAX.Node.prototype.findAll=function(a){return JAX.all(a,this._node)};
-JAX.Node.prototype.addClass=function(a){if(1!=this._node.nodeType)return JAX.Report.show("warn","JAX.Node.addClass","You can not use this method for this node. Doing nothing.",this._node),this;"string"!=typeof a&&(a+="",JAX.Report.show("error","JAX.Node.addClass","Given arguments can be string, array of strings. Trying convert to string: "+a,this._node));a=a.split(" ");for(var b=0,c=a.length;b<c;b++){var d=a[b];"string"!=typeof d&&(d+="",JAX.Report.show("error","JAX.Node.addClass","Given arguments can be string or array of strings. Trying convert to string: "+
-d,this._node));JAK.DOM.addClass(this._node,d)}return this};
-JAX.Node.prototype.removeClass=function(a){if(1!=this._node.nodeType)return JAX.Report.show("warn","JAX.Node.removeClass","You can not use this method for this node. Doing nothing.",this._node),this;"string"!=typeof a&&(a+="",JAX.Report.show("error","JAX.Node.removeClass","Given arguments can be string, array of strings. Trying convert to string: "+a,this._node));a=a.split(" ");for(var b=0,c=a.length;b<c;b++)JAK.DOM.removeClass(this._node,a[b]);return this};
-JAX.Node.prototype.hasClass=function(a){if(1!=this._node.nodeType)return JAX.Report.show("warn","JAX.Node.hasClass","You can not use this method for this node. Doing nothing.",this._node),this;"string"!=typeof a&&(a+="",JAX.Report.show("error","JAX.Node.hasClass","For first argument I expected string. Trying convert to string: "+a,this._node));for(a=a.split(" ");a.length;){var b=a.shift();if(-1==this._node.className.indexOf(b))return!1}return!0};
+JAX.Node.prototype.addClass=function(a){if(1!=this._node.nodeType)return JAX.Report.show("warn","JAX.Node.addClass","You can not use this method for this node. Doing nothing.",this._node),this;"string"!=typeof a&&(a+="",JAX.Report.show("error","JAX.Node.addClass","Given arguments can be string, array of strings. Trying convert to string: "+a,this._node));a=a.split(" ");for(var b=0,c=a.length;b<c;b++)this._node.classList.add(a[b]);return this};
+JAX.Node.prototype.removeClass=function(a){if(1!=this._node.nodeType)return JAX.Report.show("warn","JAX.Node.removeClass","You can not use this method for this node. Doing nothing.",this._node),this;"string"!=typeof a&&(a+="",JAX.Report.show("error","JAX.Node.removeClass","Given arguments can be string, array of strings. Trying convert to string: "+a,this._node));a=a.split(" ");for(var b=0,c=a.length;b<c;b++)this._node.classList.remove(a[b]);return this};
+JAX.Node.prototype.hasClass=function(a){if(1!=this._node.nodeType)return JAX.Report.show("warn","JAX.Node.hasClass","You can not use this method for this node. Doing nothing.",this._node),this;"string"!=typeof a&&(a+="",JAX.Report.show("error","JAX.Node.hasClass","For first argument I expected string. Trying convert to string: "+a,this._node));if(""==a)return!1;for(a=a.split(" ");a.length;){var b=a.shift();if(!this._node.classList.contains(b))return!1}return!0};
 JAX.Node.prototype.toggleClass=function(a){this.hasClass(a)?this.removeClass(a):this.addClass(a);return this};JAX.Node.prototype.id=function(a){if(1!=this._node.nodeType)return JAX.Report.show("warn","JAX.Node.id","You can not use this method for this node. Doing nothing.",this._node),this;if(!arguments.length)return this.attr("id");"string"!=typeof a&&(a+="",JAX.Report.show("warn","JAX.Node.id","For first argument I expected string. Trying convert to string: "+a,this._node));this.attr({id:a});return this};
 JAX.Node.prototype.html=function(a){if(1!=this._node.nodeType)return JAX.Report.show("warn","JAX.Node.html","You can not use this method for this node. Doing nothing.",this._node),this;if(!arguments.length)return this._node.innerHTML;"string"!=typeof a&&"number"!=typeof a&&(a+="",JAX.Report.show("error","JAX.Node.html","For first argument I expected string or number. Trying convert to string: "+a,this._node));this._node.innerHTML=a+"";return this};
 JAX.Node.prototype.text=function(a){if(-1==[1,3,8].indexOf(this._node.nodeType))return JAX.Report.show("warn","JAX.Node.text","You can not use this method for this node. Doing nothing.",this._node),this;if(!arguments.length)return"innerHTML"in this._node?this._getText(this._node):this._nodeValue;"innerHTML"in this._node?(this.clear(),this._node.appendChild(this._node.ownerDocument.createTextNode(a))):"nodeValue"in this._node&&(this._node.nodeValue=a);return this};
